# R-Type

./: CMakeLists.txt  Makefile  README.md  RFC6969.txt  conanfile.txt  pour_quentin.sh  run.sh  run_clear.sh
client/: CMakeLists.txt  README.md
client/engine_include/: Engine.hpp  EngineException.hpp  Scene.hpp  SceneManager.hpp
client/engine_include/gui/: Button.hpp  Gui.hpp  Label.hpp  List.hpp  Widget.hpp
client/engine_src/: Engine.cpp  EngineException.cpp  Entity.cpp  Scene.cpp  SceneManager.cpp
client/engine_src/gui/: Button.cpp  Gui.cpp  Label.cpp  List.cpp  Widget.cpp
client/include/: Application.hpp  ConnectScene.hpp  ConnectScene_join.hpp  Entity.hpp  GameScene.hpp  JoinScene.hpp  LobbyScene.hpp  MenuScene.hpp  SettingsScene.hpp
client/src/: Application.cpp  ConnectScene.cpp  ConnectScene_join.cpp  GameScene.cpp  JoinScene.cpp  LobbyScene.cpp  Main.cpp  MenuScene.cpp  SettingsScene.cpp
common/include/: serialize.hpp  sockets.hpp
common/include/interfaces/: IPackets.hpp  ISerialize.hpp  ISockets.hpp
common/include/util/: Logger.hpp  Utils.hpp  Vec2.hpp
common/src/: serialize.cpp  sockets.cpp
common/src/util/: Logger.cpp  Utils.cpp
lib/: Makefile
lib/src/: Boss.cpp  Missile.cpp  Mob.cpp
server/: CMakeLists.txt
server/include/: game.hpp  server.hpp
server/include/ecs/: EntityManager.hpp  SystemManager.hpp
server/include/ecs/component/: Armed.hpp  Movable.hpp  (+4 more)
server/include/interfaces/: IGame.hpp  IServer.hpp
server/include/lib/: DynCaller.hpp  DynCallerException.hpp  IDynCaller.hpp  UnixDynCaller.hpp
server/src/: Game.cpp  GameLoop.cpp  main.cpp  server.cpp
server/src/ecs/: EntityManager.cpp  SystemManager.cpp
server/src/lib/: DynCallerException.cpp
(+27 files in other folders)
